maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:2: error: class Array takes type parameters
def getBaggleCoords():Array = {
                      ^ShortestPathMaze:2: error: class Array takes type parameters
def getBaggleCoords():Array = {
                      ^