maze.shortestpath.ShortestPathMaze.scala.code
def getBaggleCoords():Array = {
  for(i <- 0 to getWorldHeight() - 1) {
    for(j <- 0 to getWorldWidth() - 1) {
      if(hasBaggle(j, i)) {
        return Array(j, i);
      }
    }
  }
}

override def run() {
    // Your code here
}